--- a/Final_Manuscript.tex
+++ b/Final_Manuscript.tex
@@ -259,7 +259,9 @@ combined to create the final analysis sample (\emph{N =} 64) used in
 this study. In the measures section that follows we refer to them as
 Sample 1 and Sample 2. Sample 1 (\emph{N =} 24) is from a co-ed liberal
 arts college in the northeast US and Sample 2 (\emph{N =} 40) is from a
-women's liberal arts college in the northeast US.
+women's liberal arts college in the northeast US. The results section
+contains more detail about equivalence analyses to support the decision
+to combine these two samples.
 
 \begin{table}[tbp]
 \begin{center}
@@ -539,6 +541,20 @@ of the dyads in the current study led us to choose the MLM approach over
 SEM. These analyses are considered exploratory, given the lack of prior
 research theorizing about these linkages.
 
+Before moving to the main analyses, we discuss statistical equivalence
+test that provide support for combining Sample 1 and Sample 2 in one
+analysis sample. The online supplemental material contains the main
+analyses separated by samples.
+
+\subsubsection{Combining Samples}\label{combining-samples-1}
+
+The correaltions between study variables is similar across samples. The
+realibialities for the study scales were also equivalent. (Note that the
+two samples were two small to conduct formal measurement equivalence
+tests for scales.) There are no statistically significant differences
+between samples in demographics including age, STATS, and ethnicity,
+STATS.
+
 \begin{figure}
 \includegraphics[width=400px]{SEMfigure} \caption{Path Analysis Model with Estimates}\label{fig:semfigure}
 \end{figure}
@@ -599,6 +615,10 @@ partner's other objectificaiton on career aspirations, \emph{b} = -0.05,
 relationship agency, \emph{b} = -0.04, \emph{SE} = 0.11, \emph{p} =
 .699, and no direct effect of partner's other objectificaiton on
 relationship agency, \emph{b} = -0.07, \emph{SE} = 0.1, \emph{p} = .474.
+
+The results were similar for analyses conducted on Sample 1 and Sample 2
+individually. See the online supplemental material for more detail on
+these analyses.
 
 \section{Discussion}\label{discussion}
 
